# gitahead

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  GitAhead  LICENSE.md  README.md  cl-fmt.sh
dep/cmark/: CMakeLists.txt
dep/git/: CMakeLists.txt
dep/hunspell/: CMakeLists.txt
dep/libgit2/: CMakeLists.txt
dep/libssh2/: CMakeLists.txt
dep/lpeg/: CMakeLists.txt
dep/lua/: CMakeLists.txt
dep/scintilla/: CMakeLists.txt  FindQScintilla.cmake  Readme.md
dep/scintilla/scintilla-3.10.6/: .hg_archival.txt  .hgtags  BACKPORTING  LongTermDownload.html  README  check.mak  checkdeps.mak  cppcheck.suppress
dep/scintilla/scintilla-3.21.0/: .hg_archival.txt  .hgeol  .hgignore  .hgtags  BACKPORTING  LongTermDownload.html  check.mak  checkdeps.mak
dep/scintilla/scintilla-3.6.0/: .hg_archival.txt  .hgeol  .hgignore  .hgtags
l10n/: CMakeLists.txt  gitahead_de.ts  gitahead_en.ts  gitahead_es.ts  gitahead_ja.ts  gitahead_pt.ts  gitahead_pt_BR.ts  gitahead_ru.ts  gitahead_zh-CN.ts  gitahead_zh_CN.ts  gittyup_en.ts  gittyup_es.ts  gittyup_pt.ts  gittyup_pt_BR.ts  gittyup_ru.ts  gittyup_zh_CN.ts
pack/: CMakeLists.txt  CPack.STGZ_Header.sh.in  PKGBUILD  Readme.md
pack/flatpak/: Readme.md  io.github.gitahead.gitahead.json  io.github.gittyup.gittyup.json
src/: CMakeLists.txt
src/app/: Application.cpp  Application.h  Application_mac.mm  CMakeLists.txt  CustomTheme.cpp  CustomTheme.h  CustomTheme_mac.mm  GitAhead.cpp  Gittyup.cpp  Theme.cpp  Theme.h
src/cli/: CMakeLists.txt  Installer.cpp  Installer.h  Installer_linux.cpp  Installer_mac.mm
src/conf/: CMakeLists.txt  ConfFile.cpp  ConfFile.h  RecentRepositories.cpp  RecentRepositories.h  RecentRepository.cpp  RecentRepository.h  Setting.cpp  Setting.h  Settings.cpp  Settings.h  SettingsId.cpp  SettingsId.h
src/cred/: CMakeLists.txt  Cache.cpp  Cache.h  CredentialHelper.cpp  CredentialHelper.h  GitCredential.cpp  GitCredential.h  WinCred.cpp  WinCred.h
src/dialogs/: AboutDialog.cpp  AboutDialog.h  AccountDialog.cpp  AccountDialog.h  AddRemoteDialog.cpp  AddRemoteDialog.h  AmendDialog.cpp  AmendDialog.h  BranchDelegate.cpp  BranchDelegate.h  BranchTableModel.cpp  BranchTableModel.h  CMakeLists.txt  CheckoutDialog.cpp  CheckoutDialog.h  CloneDialog.cpp  CloneDialog.h  CommitDialog.cpp  CommitDialog.h  ConfigDialog.cpp  ConfigDialog.h  DeleteBranchDialog.cpp  DeleteBranchDialog.h  DeleteTagDialog.cpp  DeleteTagDialog.h  DiffFileDialog.cpp  DiffFileDialog.h  DiffPanel.cpp  DiffPanel.h  ExternalToolsDialog.cpp  ExternalToolsDialog.h  ExternalToolsModel.cpp  ExternalToolsModel.h  HotkeysPanel.cpp  HotkeysPanel.h  IconLabel.cpp  IconLabel.h  MergeDialog.cpp  MergeDialog.h  NewBranchDialog.cpp  (+25 more)
src/editor/: CMakeLists.txt  LexLPeg.cpp  PlatQt.cpp  PlatQt.h  ScintillaIFace.cpp  ScintillaIFace.cpp.in  ScintillaIFace.h  ScintillaIFace.h.in  ScintillaQt.cpp  ScintillaQt.h  TextEditor.cpp  TextEditor.h  iface.py  ifacer.py
src/git/: AnnotatedCommit.cpp  AnnotatedCommit.h  Blame.cpp  Blame.h  Blob.cpp  Blob.h  Branch.cpp  Branch.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Command.cpp  Command.h  Commit.cpp  Commit.h  Config.cpp  Config.h  Diff.cpp  Diff.h  Filter.cpp  Filter.h  FilterList.cpp  FilterList.h  Id.cpp  Id.h  Index.cpp  Index.h  Object.cpp  Object.h  Patch.cpp  Patch.h  Rebase.cpp  Rebase.h  Reference.cpp  Reference.h  Remote.cpp  Remote.h  Repository.cpp  Repository.h  Result.cpp  (+13 more)
src/host/: Account.cpp  Account.h  Accounts.cpp  Accounts.h  Beanstalk.cpp  Beanstalk.h  Bitbucket.cpp  Bitbucket.h  CMakeLists.txt  GitHub.cpp  GitHub.h  GitLab.cpp  GitLab.h  Gitea.cpp  Gitea.h  Repository.cpp  Repository.h
src/index/: CMakeLists.txt  GenericLexer.cpp  GenericLexer.h  Index.cpp  Index.h  IndexModel.cpp  IndexModel.h  LPegLexer.cpp  LPegLexer.h  Lexer.cpp  Lexer.h  Query.cpp  Query.h  index_test.cpp  indexer.cpp  lexer_test.cpp
src/log/: CMakeLists.txt  LogDelegate.cpp  LogDelegate.h  LogEntry.cpp  LogEntry.h  LogModel.cpp  LogModel.h  LogView.cpp  LogView.h
src/plugins/: CMakeLists.txt  Plugin.cpp  Plugin.h
src/tools/: CMakeLists.txt  DiffTool.cpp  DiffTool.h  EditTool.cpp  EditTool.h  ExternalTool.cpp  ExternalTool.h  MergeTool.cpp  MergeTool.h  ShowTool.cpp  ShowTool.h
src/ui/: AdvancedSearchWidget.cpp  AdvancedSearchWidget.h  AlternativeTreeWidget.cpp  AlternativeTreeWidget.h  Badge.cpp  Badge.h  BlameEditor.cpp  BlameEditor.h  BlameMargin.cpp  BlameMargin.h  CMakeLists.txt  ColumnView.cpp  ColumnView.h  CommitList.cpp  CommitList.h  CommitToolBar.cpp  CommitToolBar.h  ContextMenuButton.cpp  ContextMenuButton.h  DetailView.cpp  DetailView.h  DiffTreeModel.cpp  DiffTreeModel.h  DiffView.cpp  DiffView.h  DiffWidget.cpp  DiffWidget.h  DoubleTreeWidget.cpp  DoubleTreeWidget.h  EditorWindow.cpp  EditorWindow.h  ExpandButton.cpp  ExpandButton.h  FileContextMenu.cpp  FileContextMenu.h  FileList.cpp  FileList.h  FindWidget.cpp  FindWidget.h  Footer.cpp  (+66 more)
src/ui/DiffView/: Button.h  Comment.cpp  Comment.h  CommentWidget.h  DiffView.cpp  DiffView.h  DiscardButton.h  DisclosureButton.h  EditButton.cpp  EditButton.h  Editor.h  FileLabel.cpp  FileLabel.h  Images.cpp  (+7 more)
src/update/: CMakeLists.txt  DownloadDialog.cpp  DownloadDialog.h  UpToDateDialog.cpp  UpToDateDialog.h  UpdateDialog.cpp  UpdateDialog.h  Updater.cpp  Updater.h  Updater_mac.mm  Updater_win.cpp  relauncher.cpp  update.py
src/util/: CMakeLists.txt  Path.cpp  Path.h
src/watcher/: CMakeLists.txt  RepositoryWatcher.cpp  RepositoryWatcher.h  RepositoryWatcher_linux.cpp  RepositoryWatcher_mac.cpp  RepositoryWatcher_win.cpp
test/: CMakeLists.txt  CherryPick.cpp  CommitAuthorCommitter.cpp  Diff.cpp  EditorLineInfos.cpp  HunkWidget.cpp  Setting.cpp  SettingsId.cpp  SshConfig.cpp  Submodule.cpp  Test.cpp  Test.h  TreeView.cpp  amend.cpp  bare_repo.cpp  branches_panel.cpp  config.cpp  editor.cpp  external_tools_dialog.cpp  fileContextMenu.cpp  index.cpp  init_repo.cpp  line_endings.cpp  log.cpp  main_window.cpp  merge.cpp  new_branch_dialog.cpp  rebase.cpp  referencelist.cpp  sample.cpp  sanity.cpp  ssh_config  ssh_config2
test/testRepos/: .gitignore
(+551 files in other folders)
